# openapi.json
@@ -68,6 +68,16 @@
                 }
               }
             }
+          },
+          "403": {
+            "description": "Forbidden: Admin privileges required",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiErrorResponse"
+                }
+              }
+            }
           }
         },
         "security": [
@@ -927,6 +937,16 @@
           },
           "401": {
             "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ApiErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden: Admin privileges required",
             "content": {
               "application/json": {
                 "schema": {
